# potilastieto

./: .gitignore  IDCshort.csv  README.md  agents.md  potilastieto.db  pyproject.toml  wsl.txt
backend/: __init__.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  appointment.py  audit.py  base.py  diagnosis.py  patient.py  token.py  user.py  visit.py
backend/app/schemas/: __init__.py  appointment.py  audit.py  auth.py  clinical.py  common.py  diagnosis.py  patient.py
backend/app/services/: __init__.py  appointments.py  audit.py  audit_policy.py  auth.py  background.py  diagnosis_codes.py  notifications.py  patients.py  security.py  visits.py
backend/app/tests/: conftest.py  test_appointments_api.py  test_appointments_service.py  test_audit_api.py  test_audit_logging.py  test_diagnosis_codes_api.py  test_diagnosis_codes_service.py  test_migrations.py  test_patients_api.py  test_patients_service.py  test_visits_api.py
docs/: api.md  architecture.md  implementation_plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: ProtectedLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminDiagnosisCodesPage.tsx  FirstVisitPage.tsx  LoginPage.tsx  PatientCreatePage.tsx  PatientDetailPage.tsx  PatientsPage.tsx  (+1 more)
specs/: patient_system_requirements.csv  requirement_status.yml
tools/: redact_audit_metadata.py  spec_loader.py
(+22 files in other folders)
